@@ -26,8 +26,8 @@
  * @summary Test virtual threads using core reflection
  * @modules java.base/java.lang:+open
  * @library /test/lib
- * @compile --enable-preview -source ${jdk.version} Reflection.java
- * @run testng/othervm --enable-preview Reflection
+ * @enablePreview
+ * @run testng Reflection
  */
 
 import java.lang.reflect.Constructor;
@@ -39,6 +39,7 @@ import java.util.concurrent.ThreadFactory;
 import java.util.concurrent.locks.LockSupport;
 
 import jdk.test.lib.thread.VThreadRunner;
+import org.testng.SkipException;
 import org.testng.annotations.Test;
 import static org.testng.Assert.*;
 
@@ -141,10 +142,12 @@ public class Reflection {
      */
     @Test
     public void testInvokeStatic6() throws Exception {
+        if (!ThreadBuilders.supportsCustomScheduler())
+            throw new SkipException("No support for custom schedulers");
         Method parkMethod = Parker.class.getDeclaredMethod("park");
         try (ExecutorService scheduler = Executors.newFixedThreadPool(1)) {
-            ThreadFactory factory = ThreadBuilders.virtualThreadBuilder(scheduler).factory();
-
+            Thread.Builder builder = ThreadBuilders.virtualThreadBuilder(scheduler);
+            ThreadFactory factory = builder.factory();
             Thread vthread = factory.newThread(() -> {
                 try {
                     parkMethod.invoke(null);   // blocks
@@ -315,10 +318,12 @@ public class Reflection {
      */
     @Test
     public void testNewInstance6() throws Exception {
+        if (!ThreadBuilders.supportsCustomScheduler())
+            throw new SkipException("No support for custom schedulers");
         Constructor<?> ctor = Parker.class.getDeclaredConstructor();
         try (ExecutorService scheduler = Executors.newFixedThreadPool(1)) {
-            ThreadFactory factory = ThreadBuilders.virtualThreadBuilder(scheduler).factory();
-
+            Thread.Builder builder = ThreadBuilders.virtualThreadBuilder(scheduler);
+            ThreadFactory factory = builder.factory();
             Thread vthread = factory.newThread(() -> {
                 try {
                     ctor.newInstance();
